Fixed another border render error when a search suggestion had only the "containing" area visible.
git-svn-id: file:///home/git-svn-mirror/pushmi-svn-mirror/trunk@64462 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/extensions/UsabilityInitiative/css/combined.css
+++ b/extensions/UsabilityInitiative/css/combined.css
@@ -9,7 +9,6 @@
 	border: none;
 	z-index: 99;
 	padding: 0;
-	margin-top: -1px;
 }
 .suggestions-special {
 	position: relative;
@@ -17,13 +16,12 @@
 	font-size: 0.8em;
 	cursor: pointer;
 	border: solid 1px #aaaaaa;
-	border-top-width: 0;
 	padding: 0;
 	margin: 0;
+	margin-top: -2px;
 	display: none;
 	padding: 0.25em 0.25em;
 	line-height: 1.25em;
-	margin-top: -1px;
 }
 .suggestions-special:hover {
 	background-color: #4C59A6;
@@ -43,7 +41,6 @@
 	border-top-width: 0;
 	padding: 0;
 	margin: 0;
-	margin-top: 1px;
 }
 .suggestions-result {
 	color: black;
